# graphrag-multiagent-workspace

./: .env.local.example  .gitignore  INTEGRATION_PLAN.md  PYTHON_QUICKSTART.md  README.md  SETUP_COMPLETE.md  SYSTEM_STATUS.md  check-status.ps1  docker-compose.yml  eslint.config.mjs  jest.config.js  next.config.ts  package-lock.json  package.json  start-dmp-simple.sh  start-dmp-system.bat  start-dmp-system.ps1  start-dmp-system.sh  start-modern.sh  start-simple.ps1  workspace.poml
.github/workflows/: ci-node.yml  ci-python.yml
backend/: .env.example  README.poml  app.js  package-lock.json  package.json  unified-dmp-server.js
backend/logs/: README.poml
backend/services/: README.poml  gitService.js  multiAgentService.js  pythonProxy.js
backend/tests/: README.poml  agents.test.js  test_integration.py
dmp-intellisense-source/: README.poml  pyproject.toml  requirements.txt  run.py
dmp-intellisense-source/scripts/: README.poml  start_app.sh
dmp-intellisense-source/src/: README.poml  agents.py  graph.py  routes.py
frontend/: README.poml
outputs/: README.poml
public/: README.poml
scripts/: README.poml  setup.ts
src/: README.poml
src/__tests__/: GraphViz.test.tsx  README.poml
src/app/: README.poml  layout.tsx  page-backup.tsx  page.tsx
src/components/: D3ForceKnowledgeGraph.tsx  DMPChatInterface.tsx  EnhancedChatInterface.tsx  GraphStatsCard.tsx  GraphViz.tsx  InteractiveKnowledgeGraph.tsx  OllamaDocumentAnalyzer.tsx  OllamaModelManager.tsx  QuickActionsCard.tsx  README.poml  SystemStatusCard.tsx  UnifiedKnowledgeGraph.tsx  layoutWorker.ts
(+23 files in other folders)
